--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,15 @@
         tools:targetApi="31" >
         <activity
             android:name=".InputActivity"
-            android:exported="false"
-            android:theme="@style/Theme.ScoreCount" />
-        <activity
-            android:name=".Input"
-            android:exported="false" />
+            android:exported="true"
+            android:theme="@style/Theme.ScoreCount" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter> </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
